--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ a:hover {
 .d-bloc h5 a:hover,
 .d-bloc h6 a:hover,
 .d-bloc p a:hover {
-    color: #000000);
+    color: #000000;
 }
 
 .d-bloc .navbar-toggle .icon-bar {
